--- a/templates/faq_list.html
+++ b/templates/faq_list.html
@@ -20,7 +20,21 @@
         </div>
     </div>
 
-    <video width="600" controls>
+    <article>
+        <p>Это пример текста, где первая буква и первая строка абзаца выделены с помощью псевдоэлементов.</p>
+    </article>
+
+    <p class="context">Это основной текст, к которому добавлен контекст.</p>
+
+    <ul class="custom-list">
+        <li>Элемент списка 1</li>
+        <li>Элемент списка 2</li>
+        <li>Элемент списка 3</li>
+    </ul>
+
+    <p>Выделите этот текст, чтобы увидеть изменение стиля.</p>
+
+    <!--<video width="600" controls>
         <source src="{% static 'videos/example.mp4' %}" type="video/mp4">
         Ваш браузер не поддерживает тег видео.
     </video>
@@ -187,7 +201,7 @@
         <dd>definition3</dd> 
     </dl>
 
-    <p>Термин <dfn title="HyperText Markup Language">HTML</dfn> означает HyperText Markup Language.</p>
+    <p>Термин <dfn title="HyperText Markup Language">HTML</dfn> означает HyperText Markup Language.</p>-->
 
     
     
