--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,6 +46,13 @@ body {
     padding: 20px;
 }
 
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 20px;
+}
+
 .about-company, .article-summary {
     background-color: #e1e1e1;
     padding: 20px;
@@ -163,10 +170,79 @@ details[open] summary {
     color: #007bff;
 }
 
+.cart-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.cart-item {
+    background-color: #f9f9f9;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-name {
+    font-weight: bold;
+}
+
+.update-form, .delete-form {
+    display: inline;
+}
+
+.quantity-input {
+    width: 50px;
+    margin-right: 10px;
+}
+
+.btn {
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    color: white;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    color: white;
+}
+
+.btn-secondary:hover {
+    background-color: #5a6268;
+}
+
+.btn-danger {
+    background-color: #dc3545;
+    color: white;
+}
+
+.btn-danger:hover {
+    background-color: #c82333;
+}
+
+.total-price {
+    font-weight: bold;
+    color: #333;
+}
+
 footer {
-    background-color :#ccc;
+    background-color: #ccc;
     width: 100%; 
     text-align: center;
+    padding: 10px;
+    bottom: 0;
 }
 
 .navbar-icon {
@@ -175,3 +251,74 @@ footer {
     margin-left: 5px;
 }
 
+
+.buy-button {
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.buy-button:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.reviews-button, .read-more {
+    display: block;
+    margin-top: 10px;
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.partners, .ads {
+    flex: 1;
+}
+
+.reviews-button:hover, .read-more:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+div span {
+    color: purple;
+}
+
+ul > li {
+    list-style-type: square;
+}
+
+article p::first-letter {
+    font-size: 2em;
+    color: red;
+}
+article p::first-line {
+    font-weight: bold;
+}
+
+.context::before {
+    content: "Начало контекста: ";
+    font-weight: bold;
+}
+.context::after {
+    content: " :Конец контекста";
+    font-weight: bold;
+}
+
+ul.custom-list li::marker {
+    content: "\3935";
+    color: blue;
+    font-size: 1.5em;
+}
+
+::selection {
+    background: yellow;
+    color: black;
+}
