--- a/templates/create_product.html
+++ b/templates/create_product.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="form-container">
-            <h1>{% block title %}Создать/Редактировать товар{% endblock %}</h1>
+            <h1>Создать товар</h1>
             <form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
