--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,23 +2,30 @@
 {% block title %}Информация о товаре{% endblock %}
 {% block content %}
     <div class="container">
-        <h2>{{ product.name }}</h2>
-        <p>Единица измерения: {{ product.get_unit_display }}</p>
-        <p>Цена: {{ product.price }}</p>
-        {% if user.is_authenticated and not user.is_staff %}
-        <form method="POST" action="{% url 'add_to_cart' product.id %}">
-            {% csrf_token %}
-            <label for="quantity">Количество:</label>
-            <input type="number" id="quantity" name="quantity" value="1" min="1" required>  
-            <button type="submit" class="buy-button">Добавить в корзину</button>
-        </form>
-        {% endif %}
-        {% if user.is_authenticated %}
-            <a class="reviews_cls" href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
-        {% endif %}
-        {% if user.is_authenticated and user.is_staff %}
-            <a href="{% url 'edit_product' product.pk %}" class="read-more">Редактировать</a>
-        {% endif %}
+        <div class="product-card">
+            <h2 class="product-title">{{ product.name }}</h2>
+            <div class="product-image">
+                <!-- Здесь можно добавить изображение товара -->
+                <img src="{{ product.image_url }}" alt="{{ product.name }}" />
+            </div>
+            <div class="product-details">
+                <p class="product-unit">Единица измерения: <strong>{{ product.get_unit_display }}</strong></p>
+                <p class="product-price">Цена: <strong>{{ product.price }} ₽</strong></p>
+            </div>
+            {% if user.is_authenticated and not user.is_staff %}
+            <form method="POST" action="{% url 'add_to_cart' product.id %}" class="form-container">
+                {% csrf_token %}
+                <label for="quantity">Количество:</label>
+                <input type="number" id="quantity" name="quantity" value="1" min="1" required>
+                <button type="submit" class="buy-button">Добавить в корзину</button>
+            </form>
+            {% endif %}
+            {% if user.is_authenticated %}
+                <a class="reviews_cls" href="{% url 'product_reviews' product_id=product.id %}" class="reviews-button">Отзывы</a>
+            {% endif %}
+            {% if user.is_authenticated and user.is_staff %}
+                <a href="{% url 'edit_product' product.pk %}" class="edit-button">Редактировать</a>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
-
