--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -5,9 +5,9 @@
 {% block content %}
     <div class="container">
         <h1>{{ article.title }}</h1>
-        <div class="article-summary">
+        < class="article-summary">
             <img src="{{ article.image.url }}" alt="{{ article.title }}">
-            <p>{{ article.content }}</p>
+                <p>{{ article.content }}</p>
             <a href="{% url 'article_list' %}">Вернуться к списку статей</a>
         </div>
     </div>
