--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -5,8 +5,7 @@
         <div class="product-card">
             <h2 class="product-title">{{ product.name }}</h2>
             <div class="product-image">
-                <!-- Здесь можно добавить изображение товара -->
-                <img src="{{ product.image_url }}" alt="{{ product.name }}" />
+                <img src="{{ product.image.url }}" alt="{{ product.name }}" width="200" />
             </div>
             <div class="product-details">
                 <p class="product-unit">Единица измерения: <strong>{{ product.get_unit_display }}</strong></p>
